<?xml version="1.0" ?>
<resources xmlns:tools="http://schemas.android.com/tools">
    <string name="app_name">Litube</string>
    <string name="thumbnail">Thumbnail</string>
    <string name="video">Video</string>
    <string name="cancel">Cancel</string>
    <string name="download">Download</string>
    <string name="queue">Queue</string>
    <string name="add_to_queue">Add to queue</string>
    <string name="queue_item_added">Added to queue</string>
    <string name="queue_item_unavailable">Couldn\'t get current video info. Queue item was not added.</string>
    <string name="queue_enabled_on">Queue playback enabled</string>
    <string name="queue_enabled_off">Queue playback disabled</string>
    <string name="clear_queue">Clear queue</string>
    <string name="clear_queue_confirmation">Clear all queue items?</string>
    <string name="remove_queue_item">Remove queue item</string>
    <string name="remove_queue_item_confirmation">Remove this queue item?</string>
    <string name="no_queue_items">No queue items</string>
    <string name="queue_unknown_author">Unknown author</string>
    <string name="queue_now_playing">Now playing</string>
    <string name="queue_download_unavailable">No queue items available to download</string>
    <string name="video_quality">Video Quality</string>
    <string name="confirm">Confirm</string>
    <string name="select_something_first">Please select an item first</string>

    <string name="download_finished">Download complete: \"%1$s\" saved to \"%2$s\"</string>
    <string name="failed_to_download">Failed to download</string>
    <string name="failed_to_download_thumbnail">Failed to download image</string>
    <string name="audio_only">Audio</string>
    <string name="player_gestures">Player gestures</string>
    <string name="close">Close</string>
    <string name="save">Save</string>
    <string name="share">Share</string>
    <string name="open_with">Open with</string>
    <string name="share_thumbnail">Share Thumbnail</string>
    <string name="extension">Extensions</string>
    <string name="request_restart">Restart to apply changes</string>
    <string name="restart">Restart</string>
    <string name="display_dislikes">Show dislikes</string>
    <string name="hide_shorts">Hide Shorts</string>
    <string name="action_pause">Pause</string>
    <string name="action_play">Play</string>
    <string name="action_replay">Replay</string>
    <string name="action_previous">Skip to previous</string>
    <string name="action_next">Skip to next</string>
    <string name="general">Appearance</string>
    <string name="player">Playback</string>
    <string name="sponsorblock">SponsorBlock</string>
    <string name="skip_sponsors">Skip sponsors</string>
    <string name="skip_sponsors_selfpromo">Skip self-promotion</string>
    <string name="skip_sponsors_highlight">Skip highlights</string>

    <string name="remember_last_position">Remember position</string>
    <string name="remember_quality">Remember video quality</string>
    <string name="segments">Segments</string>
    <string name="background_play">Background playback</string>
    <string name="pip">Picture-in-Picture</string>
    <string name="remember_playback_speed">Remember speed</string>
    <string name="reset">Reset</string>
    <string name="player_quality_auto">Auto</string>
    <string name="action_fullscreen">Fullscreen</string>
    <string name="action_restore_watch">Return to video</string>
    <string name="lock_screen">Lock Screen</string>
    <string name="unlock_screen">Unlock screen</string>
    <string name="error_title">Error</string>
    <string name="copy">Copy</string>
    <string name="debug_info_copied">Debug info copied to clipboard</string>
    <string name="playback_end_next">Play next</string>
    <string name="playback_end_loop">Loop video</string>
    <string name="playback_end_pause">Pause at end</string>
    <string name="playback_end_playlist_random">Playlist shuffle</string>
    <string name="subtitles">Captions</string>
    <string name="subtitles_on">Captions on</string>
    <string name="subtitles_off">Captions off</string>
    <string name="no_subtitles">No captions</string>
    <string name="jumped_to_segment">Jumped to: %1$s</string>
    <string name="jump">Jump</string>
    <string name="remember_resize_mode">Remember resize mode</string>
    <string name="in_app_mini_player">In-app mini-player</string>
    <string name="bitrate">Bitrate</string>
    <string name="dropped_frames">Dropped Frames</string>
    <string name="resolution">Resolution</string>
    <string name="video_format">Video Format</string>
    <string name="audio_format">Audio Format</string>
    <string name="resize_mode">Resize Mode</string>
    <string name="resize_fit">Fit</string>
    <string name="resize_fill">Fill</string>
    <string name="resize_zoom">Zoom</string>
    <string name="resize_fixed_width">Fixed Width</string>
    <string name="resize_fixed_height">Fixed Height</string>
    <string name="fps">FPS</string>
    <string name="channels">Channels</string>
    <string name="sample_rate">Sample Rate</string>
    <string name="active_stream_video">Video stream #%1$d [%2$s]: %3$s %4$s %5$s</string>
    <string name="active_stream_audio">Audio stream: %1$s %2$s %3$s</string>
    <string name="unknown">Unknown</string>
    <string name="active_label">Active</string>
    <string name="unknown_bitrate">Unknown bitrate</string>
    <string name="unable_to_get_stream_info">Unable to get stream info</string>
    <string name="audio_track">Audio Track</string>
    <string name="info">Info</string>
    <string name="more_options">More options</string>
    <string name="failed_to_load_video_details">Failed to load video details</string>
    <string name="failed_to_load_image">Failed to load image</string>
    <string name="application_not_found">Application not found</string>
    <string name="press_back_again_to_exit">Press back again to exit</string>
    <string name="threads">Threads</string>
    <string name="app_description">An advanced webview wrapper for YouTube.</string>
    <string name="source_code">Source Code</string>
    <string name="clear_cache">Clear Cache</string>
    <string name="export_error_log">Export Error Log</string>
    <string name="cache_cleared">Cache cleared</string>
    <string name="failed_to_export_log">Failed to export log</string>
    <string name="version">Version: %1$s</string>
    <string name="check_for_updates">Check for Updates</string>
    <string name="update_available">Update Available: %1$s</string>
    <string name="no_updates_available">You are using the latest version</string>
    <string name="checking_for_updates">Checking for updates…</string>
    <string name="failed_to_check_for_updates">Failed to check for updates</string>
    <string name="clear_cache_confirmation">Are you sure you want to clear app cache?</string>
    <string name="clear">Clear</string>
    <string name="source_link">https://github.com/HydeYYHH/litube</string>
    <string name="download_tasks_added">Download tasks added</string>
    <string name="download_tasks_added_count" tools:ignore="PluralsCandidate">%1$d tasks added to queue</string>
    <string name="download_history">Downloads</string>
    <string name="no_download_records">No download records</string>
    <string name="file_not_found">File not found</string>
    <string name="vid_copied">Video ID copied</string>
    <string name="delete_record">Delete</string>
    <string name="delete_local_file">Delete local file</string>
    <string name="clear_history">Clear history</string>
    <string name="clear_history_confirmation">Clear all download history?</string>
    <string name="status_queued">Queued</string>
    <string name="status_downloading_simple">Downloading</string>
    <string name="status_merging">Merging…</string>
    <string name="status_completed">Completed</string>
    <string name="status_cancelled">Cancelled</string>
    <string name="status_failed">Failed</string>
    <string name="type_playlist">Playlist</string>
    <string name="type_video">Video</string>
    <string name="type_audio">Audio</string>
    <string name="type_subtitle">Subtitle</string>
    <string name="type_thumbnail">Thumbnail</string>
    <string name="status_paused">Paused</string>
    <string name="download_progress_with_total">%1$s / %2$s MB (%3$d%%)</string>
    <string name="download_progress_simple">%1$s MB</string>
    <string name="download_playlist_summary" tools:ignore="PluralsCandidate">%1$d / %2$d items\n(%3$d%%)</string>
    <string name="filename">Filename</string>
    <string name="preparing_download">Preparing download…</string>
    <string name="downloading_file">Downloading: %1$s</string>
    <string name="downloads_running" tools:ignore="PluralsCandidate">%1$d downloads in progress</string>
    <string name="reset_extension_title">Reset extensions</string>
    <string name="reset_extension_message">Reset all extension settings to default?</string>
    <string name="playlist_download_title_placeholder">Playlist</string>
    <string name="playlist_download_summary" tools:ignore="PluralsCandidate">%1$d selected / %2$d ready / %3$d total</string>
    <string name="playlist_download_select_all">Select all</string>
    <string name="playlist_download_options">Download options</string>
    <string name="playlist_download_loading">Loading playlist…</string>
    <string name="playlist_download_failed_initial">Failed to load playlist</string>
    <string name="playlist_download_empty">Playlist is empty</string>
    <string name="playlist_download_prepare_progress">Preparing %1$d / %2$d</string>
    <string name="playlist_download_status_loading">Loading</string>
    <string name="playlist_download_status_ready">Ready</string>
    <string name="playlist_download_status_unavailable">Unavailable</string>
    <string name="playlist_download_status_failed">Failed</string>
    <string name="playlist_download_status_preparing">Preparing</string>
    <string name="playlist_download_status_queued">Queued</string>
    <string name="playlist_download_status_partial">Partial</string>
    <string name="playlist_download_status_canceled">Canceled</string>
    <string name="playlist_download_batch_added" tools:ignore="PluralsCandidate">%1$d items added</string>
    <string name="playlist_download_batch_added_before_cancel" tools:ignore="PluralsCandidate">%1$d items added before batch was canceled</string>
    <string name="playlist_download_batch_segment_partial" tools:ignore="PluralsCandidate">%1$d partial</string>
    <string name="playlist_download_batch_segment_failed" tools:ignore="PluralsCandidate">%1$d failed</string>
    <string name="playlist_download_started">Playlist download started</string>
</resources>

